--- a/style.css
+++ b/style.css
@@ -1,121 +1,97 @@
-body
-{
+* {
+    font-family: 'Special Elite', cursive;
+}
+
+body {
     color: white;
-    background-image: linear-gradient(to right,#FB654E,#FA2302,#C71D01,#FA2302,#FB654E);
+    background-image: linear-gradient(to right, #FB654E, #FA2302, #C71D01, #FA2302, #FB654E);
 }
 
-@font-face
-{
-    font-family: SpongeBob;
-    src: url(./fonte/Spongeboy_Me_Bob.ttf);
-}
-
-@font-face {
-    font-family: AngryBirds;
-    src: url(./fonte/angrybirds-regular.ttf);
-}
-
-a
-{
-    
+a {
     text-decoration: none;
 }
 
-h1,h2
-{
-    font-family: SpongeBob;
+h1,
+h2 {
     text-align: center;
     letter-spacing: 4px;
 }
 
-h1
-{
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.laCasa {
     text-shadow: 10px 5px 20px black;
     font-size: 3.5rem;
     word-spacing: 15px;
-    margin-top: 5px;
     margin-bottom: 5px;
 }
 
-h2
-{
+.slogan {
     text-shadow: 10px 5px 10px black;
     font-size: 1.6rem;
     margin-top: 5px;
     word-spacing: 10px;
 }
 
-p
-{
-    font-family: AngryBirds;
+p {
     font-size: 1.3rem;
 }
-#logo1
-{
-    width: 15%;
-    margin: 20px;
-    float: left;
-}
-.borda
-{
-    /* border: 3px solid #1599d6bb; */
-    padding-top: 15px;
-    font-family: SpongeBob;
-    margin: auto;
-    position: relative;
-    width: 50%;
+
+#logo1 {
+    width: 10vw;
+    margin-right: 50px;
+    padding: 10px;
+    background-image: radial-gradient(white, red);
 }
 
-.linha_menu
-{
+.linha_menu {
     text-align: center;
     margin: auto;
     width: 60%;
     /* border: 3px solid rgb(247, 247, 2); */
     font-size: 1.8rem;
 }
-.menu li
-{
+
+.menu li {
     display: inline-block;
-    margin:10px;
-    color:white;
+    margin: 10px;
+    color: white;
     padding: 10px;
     font-size: 1.8rem;
 }
 
-#slides
-{
+#slides {
     display: block;
     margin: auto;
     width: 90%;
     /* border: 1px solid white; */
 }
 
-.nomes
-{
-    position: fixed;
+.nomes {
     margin-top: 70px;
-    float: left;
     width: 38%;
 }
 
-.links
-{
-    float:right;
+.links {
+    float: right;
     padding: 0px;
     font-family: AngryBirds;
 }
 
-.links li
-{
+.links li {
     word-spacing: 8px;
     list-style: none;
     padding: 11px;
 }
 
-.links a
-{
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+.links a {
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombreamento */
     padding: 2px;
     font-size: 1.7rem;
     background-color: #C71C02;
@@ -124,17 +100,15 @@ p
     color: white;
 }
 
-.links a:hover
-{
+.links a:hover {
     list-style: none;
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     padding: 1px;
 }
 
-.button 
-{
+.button {
     font-family: AngryBirds;
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     border: 2px solid white;
     padding: 10px;
     margin: 10px;
@@ -142,15 +116,16 @@ p
     color: white;
     font-style: italic;
     font-size: 0.8;
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombreamento */
 }
-.button:hover
-{
+
+.button:hover {
     padding: 12px;
 
 }
-.dogs
-{
+
+.dogs {
     float: right;
     border: 1px solid white;
     border-radius: 8px;
@@ -158,21 +133,20 @@ p
     margin-right: 15px;
     text-align: center;
     width: 60%;
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombreamento */
     font-size: 1.6rem;
 
 }
 
-#historia
-{
+#historia {
     width: 75%;
     text-align: center;
     margin: auto;
 }
 
-footer
-{
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+footer {
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     position: relative;
     overflow: hidden;
     margin: auto;
@@ -183,70 +157,67 @@ footer
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-footer a
-{
+footer a {
     color: white;
 }
 
-footer ul,p
-{
+footer ul,
+p {
     display: inline-block;
     text-align: center;
     list-style: none;
     list-style-position: inside;
 }
 
-#IG
-{
+#IG {
     list-style-image: url(./imagens/Instagran_50.png);
 }
-#ZAP
-{
+
+#ZAP {
     list-style-image: url(./imagens/Zap_50.png);
 }
 
 
-#logo
-{
+#logo {
     width: 18%;
     position: relative;
     float: left;
 }
 
-#rodape
-{
+#rodape {
     position: relative;
     margin-left: 0px;
 }
 
-#ZAPZAP
-{    
-    position: fixed;/* posição do botão home fixa */
+#ZAPZAP {
+    position: fixed;
+    /* posição do botão home fixa */
     right: 35px;
     top: 510px;
 }
 
-.home
-{
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+.home {
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     border: 2px solid white;
     padding: 15px;
     margin: 15px;
     border-radius: 10px;
     color: white;
     font-size: 1.5rem;
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
-    position: fixed;/* posição do botão home fixa */
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombra */
+    position: fixed;
+    /* posição do botão home fixa */
     top: 500px;
     left: 10px;
     font-family: AngryBirds;
-    
-  
+
+
 }
-.home_dogs
-{
+
+.home_dogs {
     position: fixed;
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     border: 2px solid white;
     padding: 15px;
     margin: 15px;
@@ -254,17 +225,18 @@ footer ul,p
     color: white;
     font-size: 1.5rem;
     font-family: AngryBirds;
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombreamento */
 
 }
-#dogs_dogs
-{
+
+#dogs_dogs {
     opacity: 0.5;
     cursor: not-allowed;
     position: fixed;
     top: 10px;
     left: 165px;
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     border: 2px solid white;
     padding: 15px;
     margin-top: 15px;
@@ -275,33 +247,34 @@ footer ul,p
     box-shadow: 5px 10px 20px black;
 
 }
-#botao_pedido
-{
+
+#botao_pedido {
     position: fixed;
     top: 25px;
     left: 300px;
-    background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     border: 2px solid white;
     padding: 15px;
     margin: 0px;
     border-radius: 10px;
     color: white;
     font-size: 1.5rem;
-    box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+    box-shadow: 8px 10px 20px black;
+    /*colocar sombreamento */
     font-family: AngryBirds;
 }
-@media only screen and (max-width: 600px){
-    body
-    {
+
+@media only screen and (max-width: 600px) {
+    body {
         position: static;
 
     }
-    #logo1
-    {
+
+    #logo1 {
         width: 30%;
     }
-    h1
-    {
+
+    h1 {
         text-shadow: 10px 5px 20px black;
         font-size: 2rem;
         word-spacing: 15px;
@@ -309,19 +282,18 @@ footer ul,p
         margin-bottom: 5px;
     }
 
-    h2
-    {
+    h2 {
         text-shadow: 10px 5px 10px black;
         font-size: 0.9rem;
         margin-top: 5px;
         word-spacing: 10px;
     }
-    p
-    {
+
+    p {
         font-size: 0.8rem;
     }
-    .borda
-    {
+
+    .borda {
         /* border: 3px solid #f321d7bb; */
         padding-top: 5px;
         font-family: SpongeBob;
@@ -329,27 +301,26 @@ footer ul,p
         position: relative;
         width: 90%;
     }
-    .menu
-    {
+
+    .menu {
         position: relative;
         list-style: none;
-        margin:auto;
+        margin: auto;
         padding: 0;
         /* float: right; */
     }
 
-    .linha_menu
-    {
+    .linha_menu {
         display: block;
         /* float: none; */
         text-align: center;
         width: 60%;
         /* border: 3px solid rgb(6, 247, 2); */
     }
-    .button 
-    {
+
+    .button {
         font-family: AngryBirds;
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border: 2px solid white;
         text-align: center;
         padding: 3px;
@@ -357,24 +328,25 @@ footer ul,p
         border-radius: 6px;
         color: white;
         font-size: 1rem;
-        box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+        box-shadow: 8px 10px 20px black;
+        /*colocar sombreamento */
     }
-    #slides
-    {
+
+    #slides {
         margin: auto;
         text-align: center;
         display: block;
         height: 50%;
         /* border: 2px solid rgb(20, 136, 38); */
     }
-    #historia
-    {
+
+    #historia {
         width: 90%;
-        text-align:justify;
+        text-align: justify;
         margin: auto;
     }
-    .nomes
-    {
+
+    .nomes {
         position: relative;
         top: 20px;
         display: inline-block;
@@ -385,12 +357,11 @@ footer ul,p
         margin: 1px;
     }
 
-    #botao_pedido
-    {
+    #botao_pedido {
         position: sticky;
         top: 0px;
         right: 0px;
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border: 2px solid white;
         padding: 15px;
         margin: 15px;
@@ -400,11 +371,11 @@ footer ul,p
         font-family: AngryBirds;
         float: none;
     }
-    .home_dogs
-    {
+
+    .home_dogs {
         position: sticky;
         top: 0px;
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border: 2px solid white;
         padding: 15px;
         margin-top: 15px;
@@ -414,8 +385,7 @@ footer ul,p
         font-family: AngryBirds;
     }
 
-    .dogs
-    {
+    .dogs {
         float: none;
         display: inline-block;
         position: static;
@@ -424,41 +394,50 @@ footer ul,p
         margin: auto;
         text-align: center;
         width: 99%;
-        box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+        box-shadow: 8px 10px 20px black;
+        /*colocar sombreamento */
         font-size: 1rem;
 
     }
-    #cusco,#pinscher,#linguicinha
-    {
+
+    #cusco,
+    #pinscher,
+    #linguicinha {
         width: 40%;
     }
-    #rottweiler,#pitbull_monster,#pitbull_k,#cadela_baia,#jaguatirica,#vira_lata
-    {
+
+    #rottweiler,
+    #pitbull_monster,
+    #pitbull_k,
+    #cadela_baia,
+    #jaguatirica,
+    #vira_lata {
         width: 35%;
     }
-    #logo
-    {
+
+    #logo {
         width: 60%;
     }
-    #dali
-    {
+
+    #dali {
         position: sticky;
         top: 100px;
         width: 50%;
         float: left;
     }
-    .links
-    {
+
+    .links {
         float: none;
         position: sticky;
         margin-top: 0px;
-        margin-left:120px;
+        margin-left: 120px;
         width: 40%;
         padding: 1px;
     }
-    .links a
-    {
-        box-shadow: 8px 10px 20px black; /*colocar sombreamento */
+
+    .links a {
+        box-shadow: 8px 10px 20px black;
+        /*colocar sombreamento */
         padding: 2px;
         font-family: AngryBirds;
         font-size: 0.8rem;
@@ -467,9 +446,9 @@ footer ul,p
         border-radius: 3px;
         color: white;
     }
-    #cachorro_quente
-    {
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+
+    #cachorro_quente {
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border-radius: 8px;
         padding: 5px;
         margin: 5px;
@@ -478,12 +457,12 @@ footer ul,p
         margin-bottom: 50px;
 
     }
-    #dogs_dogs
-    {
+
+    #dogs_dogs {
         position: sticky;
         top: 0px;
         left: 150px;
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border: 2px solid white;
         padding: 15px;
         margin-top: 15px;
@@ -494,35 +473,34 @@ footer ul,p
         box-shadow: 5px 10px 20px black;
 
     }
-    #ZAPZAP
-    {    
-        position: fixed;/* posição do botão home fixa */
-        right:18px;
+
+    #ZAPZAP {
+        position: fixed;
+        /* posição do botão home fixa */
+        right: 18px;
         top: 490px;
         width: 12%;
     }
 
-    .home
-    {
-        background-image: linear-gradient(to bottom left,#FB654E,#FA2302,#C71D01,#FB654E);
+    .home {
+        background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
         border: 2px solid white;
         padding: 8px;
         margin: 8px;
         border-radius: 8px;
         color: white;
         font-size: 1rem;
-        box-shadow: 8px 10px 20px black; /*colocar sombreamento */
-        position: fixed;/* posição do botão home fixa */
+        box-shadow: 8px 10px 20px black;
+        /*colocar sombreamento */
+        position: fixed;
+        /* posição do botão home fixa */
         top: 500px;
         left: -5px;
         font-family: AngryBirds;
     }
-    footer
-    {
+
+    footer {
         margin-bottom: 50px;
     }
 
 }
-
-
-
