--- a/style.css
+++ b/style.css
@@ -50,17 +50,39 @@ p {
 }
 
 .linha_menu {
-    text-align: center;
-    margin: auto;
-    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.8rem;
 }
 
 .menu li {
     display: inline-block;
-    margin: 10px;
     color: white;
     padding: 10px;
+}
+
+.button {
+    background-image: linear-gradient(to left, #FB654E, #FA2302, #C71D01, #FB654E);
+    border: 1px solid white;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 8px 10px 20px black;
+}
+.button-menu{
+    padding: 10px 25px;
+    border: 2px solid white;
+    text-shadow: 2px 10px 10px black;
+}
+
+.btn-hover{
+    transition: all .5s;
+}
+
+.btn-hover:hover{
+    transform: scale(1.3);
 }
 
 #photo-fundo {
@@ -89,51 +111,18 @@ p {
     border: 1px solid white;
 }
 
-
-.links {
+.lista-dogs {
     padding: 0px;
-    font-size: 0.5rem;
 }
 
-.links li {
-    word-spacing: 8px;
+.lista-dogs li {
     list-style: none;
-    padding: 11px;
+    padding: 18px;
 }
 
-.links a {
-    box-shadow: 8px 10px 20px black;
-    /*colocar sombreamento */
-    padding: 2px;
-    font-size: 1.7rem;
-    background-color: #C71C02;
-    border: 1px solid #ffffffbb;
-    border-radius: 8px;
-    color: white;
-}
-
-.links a:hover {
-    list-style: none;
-    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
-    padding: 1px;
-}
-
-.button {
-    font-family: AngryBirds;
-    background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
-    border: 2px solid white;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    color: white;
-    font-style: italic;
-    font-size: 0.8;
-    box-shadow: 8px 10px 20px black;
-}
-
-.button:hover {
-    padding: 12px;
-
+.button-lista-dogs {
+    padding: 8px;
+    font-size: 1.5vw;
 }
 
 .dogs {
@@ -146,7 +135,6 @@ p {
     width: 60vw;
     box-shadow: 8px 10px 20px black;
     font-size: 1.6rem;
-
 }
 
 #historia {
