--- a/style.css
+++ b/style.css
@@ -4,7 +4,15 @@
 
 body {
     color: white;
-    background-image: linear-gradient(to right, #FB654E, #FA2302, #C71D01, #FA2302, #FB654E);
+    background-image: linear-gradient(to right, #FB654E, #FA2302, #FB654E);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 a {
@@ -63,7 +71,7 @@ p {
 }
 
 .button {
-    background-image: linear-gradient(to left, #FB654E, #FA2302, #C71D01, #FB654E);
+    background-image: linear-gradient(to left, #FB654E, #FA2302, #C71D01, #FA2302, #FB654E);
     border: 1px solid white;
     padding: 10px;
     margin: 10px;
@@ -71,17 +79,18 @@ p {
     color: white;
     box-shadow: 8px 10px 20px black;
 }
-.button-menu{
+
+.button-menu {
     padding: 10px 25px;
     border: 2px solid white;
     text-shadow: 2px 10px 10px black;
 }
 
-.btn-hover{
-    transition: all .5s;
+.btn-hover {
+    transition: all .8s;
 }
 
-.btn-hover:hover{
+.btn-hover:hover {
     transform: scale(1.3);
 }
 
@@ -89,68 +98,113 @@ p {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: auto;
     box-shadow: 10px 15px 25px white;
 }
 
-.photos{
+.photos {
     width: 32.95vw;
     height: 24vw;
-}
-
-#cachorro_quente{
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-}
-
-.nomes {
-    width: 35vw;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid white;
-}
-
-.lista-dogs {
-    padding: 0px;
-}
-
-.lista-dogs li {
-    list-style: none;
-    padding: 18px;
-    display: inline-block;
-}
-
-.button-lista-dogs {
-    
-    padding: 8px;
-    font-size: 1.5vw;
-}
-
-.dogs {
-    float: right;
-    border: 1px solid white;
-    border-radius: 8px;
-    margin: auto;
-    margin-right: 15px;
-    text-align: center;
-    width: 60vw;
-    box-shadow: 8px 10px 20px black;
-    font-size: 1.6rem;
 }
 
 #historia {
     width: 75%;
     text-align: center;
-    margin: auto;
     padding: 80px;
+}
+
+/* Início Código Novo */
+
+.column {
+    display: none;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.content {
+    background: transparent;
+    border-radius: 20px;
+    width: 600px;
+    height: 550px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    transition: all .8s;
+}
+
+.content:hover {
+    box-shadow: 10px 10px 50px white;
+    transform: scale(1.1);
+}
+
+.show {
+    display: block;
+}
+
+.bts {
+    background-color: #FA2302;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 8px 10px 20px black;
+    font-size: 1.2vw;
+}
+
+.bts:hover {
+    background-color: black;
+}
+
+.bts.active {
+    background-color: #666;
+    color: white;
+}
+
+ul {
+    list-style: none;
+}
+
+.lista-btn {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    padding: 0;
+}
+
+.lista-dogs {
+    display: flex;
+    align-items: center;
+}
+
+.slide {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90vw;
+    margin: 50px;
+}
+
+.ingredientes {
+    text-align: center;
+}
+
+/* Fim Código Novo */
+
+.lista-dogs li {
+    list-style: none;
+    padding: 9px;
+    display: inline-block;
 }
 
 footer {
     background-image: linear-gradient(to bottom left, #FB654E, #FA2302, #C71D01, #FB654E);
     position: relative;
     overflow: hidden;
-    margin: auto;
+    margin: 30px;
     width: 80%;
     font-size: 1.8rem;
     border: 1px solid white;
