--- a/style.css
+++ b/style.css
@@ -234,17 +234,12 @@ ul {
     width: 100%;
 }
 
-
 /* Fim Código Novo */
 
 .lista-dogs li {
     list-style: none;
     padding: 9px;
     display: inline-block;
-}
-
-.cachorro-quente-cartao {
-    display: none;
 }
 
 footer {
@@ -332,63 +327,13 @@ footer:hover {
         text-align: justify;
     }
 
-    #cachorro_quente {
+    /* #cachorro_quente {
         display: none;
-    }
+    } */
+/* Slide Responsivo Inicio */
 
-    .cachorro-quente-cartao {
-        display: grid;
-        grid-template-columns: auto auto;
-        gap: 50px;
-    }
+/* Slide Responsivo Fim */
 
-    .cartao {
-        width: 30vw;
-        height: 50vw;
-        background-color: #FB654E;
-        position: relative;
-        transform-style: preserve-3d;
-        transition: transform 1s;
-    }
-
-    .img-card {
-        width: 100%;
-    }
-
-    .btn-card {
-        font-size: 1.2rem;
-    }
-
-    .card-front,
-    .card-back {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        box-shadow: 10px 10px 10px #999;
-        border: 1px solid white;
-        border-radius: 10px;
-        color: black;
-        backface-visibility: hidden;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .flip {
-        transform: rotateY(180deg);
-    }
-
-    .card-front {
-        justify-content: space-around;
-    }
-
-    .card-back {
-        background-color: #222;
-        color: white;
-        transform: rotateY(180deg);
-        padding: 20px;
-        justify-content: space-around;
-    }
 
     #logo {
         width: 60%;
