--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 h1,
@@ -57,32 +58,15 @@ p {
     background-image: radial-gradient(white, red);
 }
 
-.linha_menu {
+.menu {
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size: 1.8vw;
+    padding: 20px;
 }
 
 .menu li {
     display: inline-block;
     padding: 10px;
-}
-
-.button {
-    background-image: linear-gradient(to left, #FB654E, #FA2302, #C71D01, #FA2302, #FB654E);
-    border: 1px solid white;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    color: white;
-    box-shadow: 8px 10px 20px black;
-}
-
-.button-menu {
-    padding: 10px 25px;
-    border: 2px solid white;
-    text-shadow: 2px 10px 10px black;
 }
 
 .btn-hover {
@@ -288,13 +272,17 @@ footer:hover {
 }
 
 @media only screen and (max-width: 768px) {
+
     #logo1 {
         width: 15vw;
     }
 
-    .linha_menu {
-        margin: 10px;
+    .bts {
+        padding: 6px 8px;
+        border-radius: 7px;
+        font-size: 2.6vh;
     }
+
 
     #cachorro_quente {
         display: none;
@@ -324,7 +312,8 @@ footer:hover {
         letter-spacing: 1px;
     }
 
-    .slogan, .titulos {
+    .slogan,
+    .titulos {
         font-size: 2.3vh;
         word-spacing: 3px;
         letter-spacing: 1px;
@@ -334,24 +323,15 @@ footer:hover {
         font-size: 1.6vh;
     }
 
-    .button {
-        border-radius: 6px;
-    }
-    
-    .button-menu {
-        padding: 8px 8px;
-        font-size: 1.8vh;
-    }
-
-    .button-add{
-        font-size: 2vh;
-        padding: 5px 10px;
+    .menu {
+        display: flex;
+        justify-content: center;
     }
 
     .photos {
         width: 40%;
     }
-    
+
     footer {
         width: 90%;
         padding: 10px;
