--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ p {
     display: none;
 }
 
+.responsivo {
+    display: none;
+}
+
 /* Início Código Novo */
 
 .column {
@@ -183,7 +187,7 @@ ul {
     transform: scale(1.1);
 }
 
-.slide {
+.slides {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -290,6 +294,190 @@ footer:hover {
 
     /* Slide Smartphone Inicio */
 
+    .responsivo {
+        display: grid;
+        
+    }
+
+    .responsivo ul {
+        padding: 0px;
+        margin: 0px;
+        list-style: none;
+    }
+
+    .cartao {
+        margin: auto;
+        width: 80vw;
+    }
+
+    img {
+        display: block;
+        max-width: 100%;
+    }
+
+    .slide-wrapper {
+        overflow: hidden;
+    }
+
+    .slide {
+        display: flex;
+    }
+
+    .slide:hover {
+        will-change: transform;
+    }
+
+    .slide li {
+        flex-shrink: 0;
+        width: 80vw;
+        height: 50vw;
+        max-width: 800px;
+        margin: 0 20px;
+        border-radius: 20px;
+        overflow: hidden;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
+        border: 2px solid black;
+        opacity: .8;
+        transform: scale(.8);
+        transition: .4s;
+    }
+
+    .slide li.active {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    [data-control="slide"] {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    [data-control="slide"] li a {
+        display: block;
+        width: 12px;
+        height: 12px;
+        background: #111;
+        border-radius: 50%;
+        overflow: hidden;
+        text-indent: -999px;
+        margin: 5px;
+    }
+
+    [data-control="slide"] li.active a,
+    [data-control="slide"] li a:hover {
+        background: #E54;
+    }
+
+    .custom-controls {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+
+    }
+
+    .custom-controls li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: .8;
+        transform: scale(.8);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin: 2px;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, .5);
+        border: 1px solid white;
+        transition: .3s;
+    }
+
+    .custom-controls li.active {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    .arrow-nav {
+        display: flex;
+        justify-content: space-around;
+        margin: 20px 0;
+    }
+
+    .arrow-nav button {
+        cursor: pointer;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        width: 40px;
+        height: 40px;
+        background: #FB5 url(/imagens/assets/arrow.svg) center center no-repeat;
+    }
+
+    .arrow-nav button.prev {
+        transform: rotate(180deg);
+    }
+
+    /* Cartão */
+
+    .cartao {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: transform 1s;
+    }
+
+    .img-card {
+        width: 100%;
+    }
+
+    .btn-card {
+        font-size: 3vw;
+        margin: 10px;
+        padding: 5px;
+    }
+
+    .card-front,
+    .card-back {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        border-radius: 20px;
+        color: black;
+        font-size: 1.7vh;
+        backface-visibility: hidden;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .flip {
+        transform: rotateY(180deg);
+    }
+
+    .card-front {
+        justify-content: center;
+    }
+
+    .card-back {
+        background: transparent;
+        color: white;
+        transform: rotateY(180deg);
+        justify-content: space-around;
+    }
+
+    .card-back h2 {
+        font-size: 5vw;
+    }
+
+    .ingredientes {
+        text-align: center;
+        font-size: 2.8vw;
+        padding: 10px;
+    }
+
     /* Slide Smartphone Fim */
 
     footer {
@@ -346,7 +534,7 @@ footer:hover {
         box-shadow: 0 10px 25px black;
     }
 
-    .mapa iframe{
+    .mapa iframe {
         height: 35vh;
     }
 
